--- a/vudjit-client/package.json
+++ b/vudjit-client/package.json
@@ -18,6 +18,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0",
+    "vuex-extensions": "^1.1.5",
     "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
